--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <!--<a class="nav-link active" href="#">Run<span class="sr-only">(current)</span></a>-->
         <!--</li>-->
         <li class="nav-item">
-          <a class="nav-link" href="http:/www.rdchambers.net">rdchambers.net</a>
+          <a class="nav-link" href="http://www.rdchambers.net">rdchambers.net</a>
         </li>
         <!--<li class="nav-item">-->
         <!--<a class="nav-link" href="#">Contact</a>-->
