--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -120,3 +120,8 @@ table.outcomes {
 .outcomes th {
   text-align: right;
 }
+
+.monospace {
+     text-align: right;
+     font-family: Consolas,monospace;
+}
