--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
               <label for="numberExemptions" class="col-sm-6 col-form-label">Number of Exemptions</label>
               <div class="col-sm-6">
                 <input id="numberExemptions" required type="number" step="1" name="numberExemptions"
-                       class="monospace form-control form-control-warning" [(ngModel)]="dm.baseline.numberExemptions"
+                       class="monospace form-control" [(ngModel)]="dm.baseline.numberExemptions"
                        min="0" pattern="^\d+$">  <!--Pattern is for non-negative integers -->
               </div>
             </div>
@@ -229,12 +229,6 @@
 
         <p>The table below shows predicted outcomes for each hypothetical. </p>
 
-        <div class="alert alert-danger" role="alert">
-          All calculations are approximate, unguaranteed, and may contain gross errors. In particular,
-          our tax tables and algorithms are likely to contain substantial mistakes, as tax structures
-          differ markedly for each jurisdiction, and often fall out of date.
-        </div>
-
         <div class="card">
           <div class="card-header"><span class="h5">Simulated Outcomes</span>
             <!--<button class="btn btn-primary pull-right btn" (click)="dm.simulateHypotheticals()">-->
@@ -278,6 +272,11 @@
               </tr>
             </table>
 
+            <div class="alert alert-danger" role="alert">
+              All calculations are approximate, unguaranteed, and may contain gross errors. In particular,
+              our tax tables and algorithms are likely to contain substantial mistakes, as tax structures
+              differ markedly for each jurisdiction, and often fall out of date.
+            </div>
           </div>
         </div>
       </div>
