--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,10 +86,20 @@
             </div>
 
             <div class="form-group row">
+              <label for="useStandardDeduction" class="col-sm-9 col-form-label">Use Standard Deduction?
+              </label>
+              <div class="col-sm-3">
+                <input id="useStandardDeduction" class="form-check-input float-xs-right" type="checkbox"
+                       name="useStandardDeduction" [(ngModel)]="dm.baseline.useStandardDeduction"/>
+              </div>
+            </div>
+
+            <div class="form-group row" *ngIf="!dm.baseline.useStandardDeduction">
               <label for="deductions" class="col-sm-6 col-form-label">Deductions</label>
               <div class="col-sm-6">
                 <input id="deductions" required step="100" name="deductions" class="monospace form-control"
-                       currencyMask [options]="{precision:0}" [(ngModel)]="dm.baseline.deductions"/>
+                       currencyMask [options]="{precision:0}" [(ngModel)]="dm.baseline.deductions"
+                       [disabled]="dm.baseline.useStandardDeduction"/>
               </div>
             </div>
 
