--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,6 +69,19 @@
             </div>
 
             <div class="form-group row">
+              <label for="filingStatus" class="col-sm-6 col-form-label">Filing Status</label>
+              <div class="col-sm-6">
+                <select class="form-control" id="filingStatus" required name="filingStatus"
+                        [(ngModel)]="dm.baseline.filingStatus">
+                  <option value="single">Single</option>
+                  <option value="married">Married</option>
+                  <option value="married_separately">Married (Separately)</option>
+                  <option value="head_of_household">Head of Household</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group row">
               <label for="adjustmentsToIncome" class="col-sm-6 col-form-label">Adjustments to Income</label>
               <div class="col-sm-6">
                 <input id="adjustmentsToIncome" required name="adjustmentsToIncome" class="monospace form-control"
